--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ pdfkit==1.0.0
 MarkupSafe==2.1.3
 itsdangerous==2.1.2
 click==8.1.7
-blinker==1.6.2 
+blinker==1.6.2
+gunicorn==21.2.0
+packaging==23.1
+whitenoise==6.5.0 
